force-app/main/default/objects/Account/fields/Transaccion_cantidad_dias__c.field-meta.xml
<CustomField>
    <fullName>Transaccion_cantidad_dias__c</fullName>
    <formula>TODAY() - Fecha_Ultima_Transaccion__c</formula>
    <label>Transacción cantidad días</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>