force-app/main/default/objects/Account/fields/Valid_Cchen__c.field-meta.xml
<CustomField>
    <fullName>Valid_Cchen__c</fullName>
    <formula>Validez_CCHEN__c &gt;= Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid Cchen</label>
    <type>Checkbox</type>
</CustomField>