force-app/main/default/objects/Account/fields/Validez_CCHEN__c.field-meta.xml
<CustomField>
    <fullName>Validez_CCHEN__c</fullName>
    <label>Validez CCHEN</label>
    <summarizedField>Yearly_CChEN_declaration__c.Date__c</summarizedField>
    <summaryFilterItems>
        <field>Yearly_CChEN_declaration__c.Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Yearly_CChEN_declaration__c.Account__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>