force-app/main/default/objects/Account/fields/Vinculos__c.field-meta.xml
<CustomField>
    <fullName>Vinculos__c</fullName>
    <label>Vínculos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Riesgo</valueSetName>
    </valueSet>
</CustomField>