force-app/main/default/objects/Account/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <inlineHelpText>Zone assigned to Account. Is used to calculate Freight Costo (CIP Incoterm)</inlineHelpText>
    <label>Zone</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Territory__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Zones</valueSetName>
    </valueSet>
</CustomField>