force-app/main/default/objects/Account/listViews/Delete_Accounts.listView-meta.xml
<ListView>
    <fullName>Delete_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Delete Accounts</label>
    <sharedTo>
        <role>Administrador_del_Sistema</role>
        <role>System_Administrator</role>
    </sharedTo>
</ListView>