force-app/main/default/objects/Account/listViews/Localidades.listView-meta.xml
<ListView>
    <fullName>Localidades</fullName>
    <columns>ACCOUNT.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Comunidad</value>
    </filters>
    <label>Localidades</label>
    <sharedTo>
        <roleAndSubordinates>SQM_Comunidades</roleAndSubordinates>
    </sharedTo>
</ListView>